refactor: update footer designer name and enhance input styles in AnalyzeForm component

--- a/indexs.html
+++ b/indexs.html
@@ -257,7 +257,7 @@
                         <span>Active Downloads: 0</span>
                         <div class="flex items-center">
                             <span class="mr-2">Designed by</span>
-                            <span class="text-purple-600 font-medium">Readdy</span>
+                            <span class="text-purple-600 font-medium">Ashikur Rahman</span>
                         </div>
                     </div>
                 </div>
